# wafproof

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/: README.md
demos/01-tighten-overbroad-rule/: SCENARIO.md  overbroad-rules.json
demos/02-coverage-gap-after-refactor/: SCENARIO.md
demos/03-custom-app-traffic-corpus/: SCENARIO.md  app-traffic-corpus.json
demos/04-callable-allowlist-detector/: SCENARIO.md  detector.py
demos/05-ci-gate-and-sarif/: SCENARIO.md  candidate-rules.json  wafproof.sarif  workflow.yml
demos/06-graphql-nosql-corpus/: SCENARIO.md  api-corpus.json  api-rules.json
demos/07-jndi-lookup-canary/: SCENARIO.md  lookup-corpus.json  lookup-rules.json
demos/08-regression-sarif-baseline/: SCENARIO.md  sarif_diff.py  v1-baseline.sarif  v2-regressed-rules.json  v2-regressed.sarif
demos/09-evasion-resistance/: SCENARIO.md  normalizing_detector.py
docs/: EVASION_AND_DIAGNOSTICS.md
examples/: help.txt  rules.json  version.txt
ports/go/: go.mod  wafproof.go  wafproof_test.go
ports/rust/: Cargo.toml
ports/shell/: test_wafproof.sh  wafproof.sh
ports/ts/: package.json  (+3 more)
tests/: test_analyze.py  test_cli.py  test_cli_evade_diagnose.py  test_cli_scan_probe_enrich.py  test_corpus.py  test_demos.py  test_detector.py  test_enrich.py  test_metrics.py  test_mutate.py  test_probe.py  test_sarif.py  test_scan.py  test_vulndb_local.py
wafproof/: __init__.py  __main__.py  analyze.py  cli.py  corpus.py  detector.py  enrich.py  metrics.py  mutate.py  probe.py  sarif.py  scan.py  vulndb_local.py
(+6 files in other folders)
